@@ -1,3 +1,6 @@
+for internal frames, focus now goes to the correct component instead of to
+the toolbar.
+
 030329 release
 --------------
 
